--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Train your mind to recognize divine 7³×7 patterns across mathematics, Scripture, science, and prophecy. Gamified consciousness development for the 144,000.">
     <meta name="keywords" content="pattern recognition, 7 cubed 7, 2401, consciousness training, 144000, divine signatures">
     <link rel="canonical" href="https://patterns.sevencubedseven.com/">
+    <meta name="google-site-verification" content="YkU859FaQhJ2tx-i62iTecF-qVtHhJ7k1q7ZX1RxUII" />
     
     <!-- Open Graph -->
     <meta property="og:type" content="website">
